@@ -1,3 +1,8 @@
+2009-12-05  Robert Millan  <rmh.grub@aybabtu.com>
+
+	* kern/ieee1275/openfw.c (grub_reboot): Disable for i386.  The
+	non-firmware-dependant one in realmode.S takes precedence.
+
 2009-12-04  Robert Millan  <rmh.grub@aybabtu.com>
 
 	* commands/halt.c: Replace misc arch-specific headers with
